--- a/app/views/html_css/lessons/lesson_3.html.erb
+++ b/app/views/html_css/lessons/lesson_3.html.erb
@@ -5,16 +5,16 @@
 </p>
 
 <p>
-	Coding outside of tutorial courses like the one we just completed is going to be completely different. You're going to be making more mistakes and you're going to encounter bugs and problems in your code more often. This is great, since this is what happens in the real world.
+	Coding in an actual web development environment will be completely different from doing tutorial lessons online. You're going to be making more mistakes and you're going to encounter bugs and problems in your code more often. This is okay though, since this is also what happens in the real world.
 </p>
 
 <p>
-  So let's go ahead and install 2 essential tools that we need as a web developer.
+  Let's go ahead and install 2 essential tools that are essential for web developers.
 </p>
 
 <h3>Sublime Text Editor</h3>
 <p>
-  There are lots of text editors, but we're going to recommend that you use Sublime for now. Sublime is a great text editor that makes code easier to read with features like syntax highlighting, indentation, multiple line edits, and many more super useful stuff.
+  There are lots of text editors, but we're going to recommend that you use Sublime for now. Sublime is a great text editor that makes code easier to read with features like syntax highlighting, indentation, multiple line editing, and many more super useful features.
 </p>
 
 <p>
@@ -22,12 +22,12 @@
 </p>
 
 <p>
-  After I download the package, I simply install it. How this is done depends on what machine you are using, but this shouldn't be complicated. If you run into troubles with downloading it, Google the problem you are having and you will find your answers. Getting into the habit of Googling things is essential to solving problems, so throughout the lessons, we'll teach you how to do this.
+  After I download the package, I simply install it. How this is done depends on what machine you are using, but this shouldn't be complicated. If you run into troubles with downloading it, Google the problem you are having and you will find your answers. <strong>Getting into the habit of Googling things is essential to solving problems.</strong> Throughout the lessons, we'll make sure that finding answers through Google becomes a habit.
 </p>
 
 <h3>Google Chrome</h3>
 <p>
-  The next thing you need to download is Google Chrome. Google Chrome is an awesome web browser that comes with Google Developer Tools. Google Developer Tools enable you to do things like type in JavaScript code and seeing if it works, changing HTML or CSS code inside the browser, and other things that we can use for developing our website.
+  The next thing you need to download is Google Chrome. Google Chrome is an awesome web browser that comes with Google Developer Tools. Google Developer Tools enables you to do things like typing in JavaScript code and seeing if it works, changing HTML or CSS code inside the browser, and other things that we can use for developing our website.
 </p>
 
 <p>
@@ -46,7 +46,7 @@
 </p>
 
 <p>
-	We believe in exposing you to building actual websites as early as possible and not just learning the syntax of programming langauges. That's because by building things as early as possible, you'll basically have more fun and will want to learn more.
+	We believe in exposing you to building actual websites as early as possible instead of spending a lot of time learning the syntax of programming langauges. That's because by building things as early as possible, you'll have more fun and will be motivated to learn more.
 </p>
 
 <p>
