--- a/app/views/html_css/lessons/lesson_4.html.erb
+++ b/app/views/html_css/lessons/lesson_4.html.erb
@@ -6,19 +6,19 @@
 </div>
 
 <p>
-  In this lesson, we're going to walk you through the steps of building a simple personal resume website. The point of this video is not really to teach you how HTML and CSS work, but to teach you the thought process of a web developer.
+  In this lesson, we're going to walk you through the steps of building a simple personal resume website. The point of this video is not really to teach you how HTML and CSS work, but to <strong>teach you the thought process of a web developer.</strong>
 </p>
 
 <p>
-  You'll notice how when faced with a problem, I quickly Google the question I have to get the answers I want. You'll also notice that you don't really have to memorize anything if you take this approach. You'll start to see that coding isn't that scary if all you have to do when you get stuck is look for answers on Google.
+  You'll notice how when faced with a problem, <strong>I quickly Google the question I have to get the answers I want.</strong> You'll also notice that you don't really have to memorize anything if you take this approach. You'll start to see that <strong>coding isn't scary</strong> if all you have to do when you get stuck is look for answers on Google.
 </p>
 
 <p>
-  While watching this video and building out the website yourself, try to imitate the thought process that I go through. I really want you to see how I approach solving problems when I am stuck.
+  While watching this video and building out the website yourself, <strong>try to imitate the thought process that I go through.</strong> I really want you to see how I approach solving problems when I am stuck.
 </p>
 
 <p>
-  Once you've completed your resume website, let's go to GitHub and go to a page called "Gist". For me, if I look on the top navigation bar, I see a link that says "Gist". So let's find that link and click on it. If you can't find it, try hitting Command + F (Mac) or Control + F (Windows) that spawns up a search box, and enter "Gist". It will find and jump to the word on the website for you and you'll be able to find the link.
+  Once you've completed your resume website, let's go to GitHub and go to a page called "Gist". For me, if I look on the top navigation bar, I see a link that says "Gist". So let's find that link and click on it. If you can't find it, try hitting Command + F (Mac) or Control + F (Windows) that spawns up a search box, and enter "Gist". It will find it and jump to the word on the website for you.
 </p>
 
 <p>
@@ -38,7 +38,7 @@
 <%= image_tag 'gist_share.png', class: 'screenshot' %>
 
 <p>
-  Finally to submit, go to the submissions page below and paste in that URL :)
+  Finally to submit, <span style="color:red;">go to the submissions page below and paste in that URL :)</span>
 </p>
 
 <p>
