--- a/app/views/html_css/lessons/lesson_5.html.erb
+++ b/app/views/html_css/lessons/lesson_5.html.erb
@@ -1,15 +1,15 @@
 <h1><%= title_for(HtmlCss, 3, 1) %></h1>
 
 <p>
-  Congratulations on finishing the resume website! I know we're throwing a lot of things at you all at once, but this is all intended! In the first few weeks, the more you build, the more you'll learn to be able actually build stuff. So in this lesson too, we're going to be making another website.
+  Congratulations on finishing the resume website! I know we're throwing a lot of things at you all at once, but this is all intended! In the first few weeks, <strong>the more you build, the more you'll learn.</strong> So in this lesson too, we're going to be making another website.
 </p>
 
 <p>
-  We're going to be making a mock landing page that's going to look pretty good, without us being a decent designer. We're going to accomplish that using Twitter Bootstrap.
+  We're going to be making a mock landing page that's going to look pretty good, without us being a genius designer. We're going to accomplish that using <strong>Twitter Bootstrap</strong>.
 </p>
 
 <p>
-  Bootstrap is a front end framework that allows developers who don't know anything at all about design, to create websites that look pretty good, pretty easily. Some people say that relying on it isn't really the best way to do things and and all websites that use bootstrap look the same. This might be super true, BUT what we want to do is teach you how to build things super quickly so that you get a basic understanding and feeling for how everything works together. After you become comfortable with HTML and CSS, we can start worrying about not using bootstrap.
+  Bootstrap is a front end framework that allows developers who don't know anything at all about design, to <strong>create websites that look pretty good, pretty easily.</strong> Some people say that relying on it isn't really the best way to do things and and all websites that use bootstrap look the same. This might be super true, BUT what we want to do is teach you <strong>how to build things as fast as possible so that you get a basic understanding and feeling for how everything works together.</strong> After you become comfortable with HTML and CSS, we can start worrying about not using bootstrap.
 </p>
 
 <p>
