fix all html lessons

--- a/app/views/html_css/lessons/lesson_10.html.erb
+++ b/app/views/html_css/lessons/lesson_10.html.erb
@@ -5,11 +5,11 @@
 </p>
 
 <p>
-  Let's go back to Bootstrap's documentation and scroll through Components. By the way, this process of going through the documentation, seeing if it looks good, and implementing it is how you should go about tackling something new :)
+  Let's go back to Bootstrap's documentation and scroll through Components. (By the way, this process of going through the documentation, seeing if it looks good, and implementing it is a good way to tackle new features.)
 </p>
 
 <p>
-  If we scroll down, we see something called page header. It looks like something that might fit in with our page, so let's add that in. We're going to copy the code that the documentation has provided for us and paste it under the closing div for the row we created earlier. Let's replace the text in the page header appropriately so that it makes sense.
+  If we scroll down, we see something called page header. It looks like something that might fit in with our page, so let's add that in. We're going to copy the code that the documentation has provided for us and paste it under the closing <code>div</code> for the <code>row</code> we created earlier. Let's replace the text in the page header appropriately so that it makes sense.
 </p>
 
 <p>
@@ -21,7 +21,7 @@
 </p>
 
 <p>
-  Let's go back into our browser and refresh the page. It's starting to come together! It should look something like below. By now, you should start figuring out the code yourself so I'll start not providing code hints ;) Good luck!
+  Let's go back into our browser and refresh the page. It's starting to come together! It should look something like below. By now, you should be able to start figuring out the code yourself so sometimes I will omit code hints ;) Good luck!
 </p>
 
 <%= image_tag 'bootstrapwell.png', class: 'screenshot' %>
