--- a/app/views/html_css/lessons/lesson_13.html.erb
+++ b/app/views/html_css/lessons/lesson_13.html.erb
@@ -1,15 +1,15 @@
 <h1><%= title_for(HtmlCss, 3, 9) %></h1>
 
 <p>
-  This is your final step! We've made a great website, let's now host it.
+  This is your final step! We've made a great website, <strong>now let's host it online.</strong>
 </p>
 
 <p>
-  This is going to be your first challenge. We give these challenges so that you learn to figure things out by yourselves. We've emphasized the importance of Googling. Utilize your newfound Googling abilities to figure out how to host the website so that you can share it with your friends! (Hint: A good question to ask might be something like "How to host a static website")
+  <strong>This is going to be your first challenge.</strong> We give these challenges so that you <strong>learn to figure things out by yourselves</strong>. We've emphasized the importance of googling. Utilize your newfound googling abilities to figure out how to host the website so that you can share it with your friends! (Hint: A good question to ask google might be something like "How to host a static website")
 </p>
 
 <p>
-  Once you've figured it out, submit your work as a link below in the submissions section to get your code reviewed! :)
+  Once you've figured it out, <span style="color:red;">submit a link to your website below in the submissions section to get your code reviewed! :)</span>
 </p>
 
 <br>
