--- a/app/views/html_css/lessons/lesson_6.html.erb
+++ b/app/views/html_css/lessons/lesson_6.html.erb
@@ -81,7 +81,7 @@
 </code></pre>
 
 <p>
-	Now let's refresh the page and see what happens. Just like that, you should see the font of your "Hello" change to something much nicer. It should look something like this:
+	Now let's refresh the page and see what happens. Just like that, you should see the font of your "Hello" change to something much nicer. The font should have changed like this:
 </p>
 
 <div class = "row screenshot_min">
