--- a/app/views/html_css/lessons/lesson_11.html.erb
+++ b/app/views/html_css/lessons/lesson_11.html.erb
@@ -9,7 +9,7 @@
 </p>
 
 <div class = "row">
-	<%= render partial: '/shared/quizzes', locals: { question: 'How can we possibly find out how to add a footer using bootstrap?', answer: 'Just Google "bootstrap footer", or experiment with Bootstrap yourself :) ', number: 1 } %>
+	<%= render partial: '/shared/quizzes', locals: { question: 'How might we possibly find out how to add a footer using bootstrap?', answer: 'Just Google "bootstrap footer", or experiment with Bootstrap yourself :) ', number: 1 } %>
 </div>
 
 <br class = "clear">
@@ -36,7 +36,7 @@
 </p>
 
 <p>
-  First, I want 4 columns within my footer. Let's take a moment to think about how we could do this. Before opening the answer, write down what you think the answer would be. If you really want to learn, take the time to recall your knowledge - that's how you learn! 
+  First, I want 4 columns inside of my footer. Let's take a moment to think about how we could do this. Before opening the answer, write down what you think the answer would be. <strong>If you really want to learn, take the time to recall your knowledge - that's how you learn!</strong>
 </p>
 
 <div class = "row">
@@ -46,31 +46,95 @@
 <br class = "clear">
 
 <p>
-  So let's go ahead and do this. Inside our <code>.container</code>, let's delete the <code>p</code> tag and replace it with a row. Inside the row, let's make 4 columns with the size of 3. So it should look something like this.
+  So let's go ahead and do this. Inside our <code>.container</code>, let's delete the <code>p</code> tag and replace it with a row. Inside the <code>row</code>, let's make 4 <coe>col</code>umns with the size of <code>3</code>. Your code should look something like this.
 </p>
 
-<div class = "gist" data-src="https://gist.github.com/takehiromouri/b328163b414e3873f3ca.json"></div>
+<pre><code class="html">
+&lt;footer class="footer"&gt;
+  &lt;div class="container"&gt;
+    &lt;div class = "row"&gt;
+
+      &lt;div class = "col-md-3"&gt;
+      &lt;/div&gt;
+
+      &lt;div class = "col-md-3"&gt;
+      &lt;/div&gt;
+
+      &lt;div class = "col-md-3"&gt;
+      &lt;/div&gt;
+
+      &lt;div class = "col-md-3"&gt;
+      &lt;/div&gt;
+      
+    &lt;/div&gt;
+  &lt;/div&gt;
+&lt;/footer&gt;
+
+</code></pre>
 
 <p>
-  Refresh the page and you should see nothing there. That's because we haven't added any content yet. First, let's add an <code>h4</code> header in each of our columns. So maybe "About", "Contact Us", "Join", "Contribute" might make sense. Refresh the page, and you should see the footer again.
+  Refresh the page and you should see nothing there. That's because we haven't added any content yet. First, let's add an <code>h4</code> header in each of our <code>col</code>umns. So maybe adding "About", "Contact Us", "Join", and "Contribute" columns might make sense. Refresh the page, and you should see the footer again.
 </p>
 
 <p>
   Now let's make a list of links under each of our headers. If you can recall, we can do this by using <code>ul</code> tags (unordered lists) and <code>li</code> tags (list elements). Inside each <code>li</code>, let's create a link.
 </p>
 
-<div class = "gist" data-src="https://gist.github.com/takehiromouri/e6b8ab2b403567f54025.json"></div>
+<pre><code class="html">
+&lt;footer class="footer"&gt;
+  &lt;div class="container"&gt;
+    &lt;div class = "row"&gt;
+      &lt;div class = "col-md-3"&gt;
+        &lt;h4&gt;About&lt;/h4&gt;
+        &lt;ul&gt;
+          &lt;li&gt;&lt;a href = "#"&gt;Link&lt;/a&gt;&lt;/li&gt;
+          &lt;li&gt;&lt;a href = "#"&gt;Link&lt;/a&gt;&lt;/li&gt;
+          &lt;li&gt;&lt;a href = "#"&gt;Link&lt;/a&gt;&lt;/li&gt;
+        &lt;/ul&gt;
+      &lt;/div&gt;
+  
+      &lt;div class = "col-md-3"&gt;
+        &lt;h4&gt;Contact&lt;/h4&gt;
+        &lt;ul&gt;
+          &lt;li&gt;&lt;a href = "#"&gt;Link&lt;/a&gt;&lt;/li&gt;
+          &lt;li&gt;&lt;a href = "#"&gt;Link&lt;/a&gt;&lt;/li&gt;
+          &lt;li&gt;&lt;a href = "#"&gt;Link&lt;/a&gt;&lt;/li&gt;
+        &lt;/ul&gt;
+      &lt;/div&gt;
+  
+      &lt;div class = "col-md-3"&gt;
+        &lt;h4&gt;Join Us&lt;/h4&gt;
+        &lt;ul&gt;
+          &lt;li&gt;&lt;a href = "#"&gt;Link&lt;/a&gt;&lt;/li&gt;
+          &lt;li&gt;&lt;a href = "#"&gt;Link&lt;/a&gt;&lt;/li&gt;
+          &lt;li&gt;&lt;a href = "#"&gt;Link&lt;/a&gt;&lt;/li&gt;
+        &lt;/ul&gt;
+      &lt;/div&gt;
+  
+      &lt;div class = "col-md-3"&gt;
+        &lt;h4&gt;Contribute&lt;/h4&gt;
+        &lt;ul&gt;
+          &lt;li&gt;&lt;a href = "#"&gt;Link&lt;/a&gt;&lt;/li&gt;
+          &lt;li&gt;&lt;a href = "#"&gt;Link&lt;/a&gt;&lt;/li&gt;
+          &lt;li&gt;&lt;a href = "#"&gt;Link&lt;/a&gt;&lt;/li&gt;
+        &lt;/ul&gt;
+      &lt;/div&gt;
+    &lt;/div&gt;
+  &lt;/div&gt;
+&lt;/footer&gt;
+
+</code></pre>
 
 <p>
-  We refresh the page and now we see all the list elements. There's one problem - the list has bullet points which we probably don't want. Let's get rid of those.
+  We refresh the page and now we see all the list elements. There's one problem - the list contains bullet points which kind of look ugly. Let's get rid of those.
 </p>
 
 <p>
-  To find out how we can achieve this, what should we do? <strong>Google it</strong>. Let's google something like "li no bullet point" and see what comes up.
+  To find out how we can achieve this, what should we do? That's right, <strong>google it</strong>. Let's google something like "li no bullet point" and see what comes up.
 </p>
 
 <p>
-  If you searched correctly, the answer is to apply a <code>style</code> of <code>list-style-type:none;</code> to the li elements. So let's go ahead and add that style to each of our <code>li</code>s. Let's see how we can do that quickly.
+  If you searched correctly, the answer is to apply a <code>style</code> of <code>list-style-type:none;</code> to the <code>li</code> elements. So let's go ahead and add that <code>style</code> to each of our <code>li</code>s. In the video below, I introduce a <strong>useful trick in Sublime Text that can maximize your productivity when writing code.</strong>
 </p>
 
 <!-- 16:9 aspect ratio -->
@@ -79,7 +143,7 @@
 </div>
 
 <p>
-  We refresh the page and we see that there we don't see any bullet points anymore. Cool! But we see now that the <code>h4</code>s seem to be unaligned. We can fix this by centering the text within the <code>div</code>. Bootstrap gives us a useful class called <code>.text-center</code> that centers the text. So let's add that class to each of our column divs. Note that you can use multi-line editing for this task as well! :)
+  We refresh the page and we see that there we don't see any bullet points anymore. Cool! But now we see that the <code>h4</code>s seem to be unaligned. We can fix this by centering the text within the <code>div</code>. Bootstrap gives us a useful class called <code>.text-center</code> that centers the text. So let's add that class to each of our column <code>div</code>s. Note that you can use multi-line editing for this task as well! :)
 </p>
 
 <p>
@@ -87,11 +151,11 @@
 </p>
 
 <p>
-  In Sublime, let's create a new file and save it as "master.css" inside our newly created "css" folder. Then let's link the css file to the HTML file. You know what you have to do when you don't know how to do something ;)
+  In Sublime, let's create a new file and save it as <code>master.css</code> inside our newly created <code>css</code> folder. Then let's link the <code>css</code> file to the <code>HTML</code> file. If you're not sure how to do that, you know what you have to do when you don't know how to do something ;)
 </p>
 
 <p>
-  Now let's work on adding a background color to the footer.
+  Now let's work on adding a background color to the footer. I show you how to use Developer Tools in Chrome to do this easily.
 </p>
 
 <!-- 16:9 aspect ratio -->
