--- a/app/views/html_css/lessons/lesson_14.html.erb
+++ b/app/views/html_css/lessons/lesson_14.html.erb
@@ -1,21 +1,21 @@
 <h1><%= title_for(HtmlCss, 4, 1) %></h1>
 
 <p>
-  This is your final challenge for the HTML/CSS course.
+  <strong>This is your final challenge for the HTML/CSS course.</strong>
 </p>
 
 <h3>MISSION: MOCK THE LAYOUT OF YOUR FAVORITE WEBSITE</h3>
 
 <p>
-  Find a website that you like and try to imitate the layout of the website using HTML and CSS. Utilize what you learned with Bootstrap and its grid system to imitate the look.
+  Find a website that you like and try to <strong>imitate the layout of the website using HTML and CSS</strong>. Utilize what you learned with Bootstrap and its grid system to imitate the look.
 </p>
 
 <p>
-  <strong>Don't try to make everything look perfectly the same</strong>. Instead, focus on getting the basic layout right. Don't care too much about the text inside it or the banners or images that the site might have. Just try to imitate the color and basic layout.
+  <strong>Don't try to make everything look perfectly the same</strong>. Instead, focus on getting the basic layout right. Don't worry too much about the text inside it or the banners or images that the site might have. Just try to imitate the color and basic layout.
 </p>
 
 <p>
-  Also, don't choose websites that are super complex! Choose a simple website. The point here is to use what you have learned in the previous lessons and apply them, not to make a super fancy looking website :)
+  Also, don't choose websites that are super complex! Choose a simple website. The point here is to <strong>apply what you have learned in the previous lessons</strong>, not to make a super fancy looking website :)
 </p>
 
 <p>
@@ -25,10 +25,11 @@
     <li>Link to your uploaded website</li>
     <li>Link to original website</li>
   </ol>
+  We'll give you feedback once you have submitted your website.
 </p>
 
 <p>
-  Good luck on this final challenge!!
+  <strong>Good luck on this final challenge!!</strong>
 </p>
 
 
