--- a/app/views/html_css/lessons/lesson_9.html.erb
+++ b/app/views/html_css/lessons/lesson_9.html.erb
@@ -1,11 +1,11 @@
 <h1><%= title_for(HtmlCss, 3, 5) %></h1>
 
 <p>
-  In order to organize our main selling points on our website, we want to be able align content cleanly.
+  In order to organize the layout of the website, aligning the content cleanly in columns might be a good idea.
 </p>
 
 <p>
-  With Bootstrap, we can make neatly aligned columns and rows pretty easily. This is one of the features of Bootstrap that makes it so great and useful. Introducing the Bootstrap Grid System.
+  With Bootstrap, we can make neatly aligned columns and rows pretty easily. This is one of the features of Bootstrap that makes it so great and useful. <strong>Introducing the Bootstrap Grid System.</strong>
 </p>
 
 <p>
@@ -13,7 +13,7 @@
 </p>
 
 <p>
-  This will take you to the documentation on how the grid system exactly works. First, read through the documentation carefully to get the gist of it. It will probably still be confusing, so let's go through the basics and then implement it on our landing page.
+  This will take you to the documentation on how the grid system exactly works. <strong>First, read through the documentation carefully to get the gist of it.</strong> It will probably still be confusing, so let's go through the basics and then implement it on our landing page.
 </p>
 
 <h3>Rows</h3>
@@ -22,14 +22,30 @@
 </p>
 
 <p>
-  We can add a row by adding a div with a class of "row". Let's go into Sublime and right underneath the jumbotron div that we created, let's add a div with a class or "row". Make sure to close the div ;)
+  We can add a row by adding a <code>div</code> with a class of <code>.row</code>. Let's go into Sublime and right underneath the jumbotron div that we created, let's add a <code>div</code> with a class or "row". Make sure to close the div ;)
 </p>
 
-<div class = "gist" src="https://gist.github.com/takehiromouri/b8af77626487c6e20251.json"></div>
+<pre><code class="html">
+    &lt;!-- rest of code above --&gt;
+
+    &lt;div class="jumbotron"&gt;
+      &lt;h1&gt;Techrise&lt;/h1&gt;
+      &lt;p&gt;Learn how to code with Techrise&lt;/p&gt;
+      &lt;p&gt;Learn HTML, CSS, JavaScript, Ruby, and Ruby on Rails&lt;/p&gt;
+      &lt;p&gt;&lt;a class="btn btn-primary btn-lg" href="#" role="button"&gt;Learn more&lt;/a&gt;&lt;/p&gt;
+    &lt;/div&gt;
+
+    &lt;div class = "row"&gt;
+
+    &lt;/div&gt;
+
+    &lt;!-- rest of code below --&gt;
+
+</code></pre>
 
 <h3>Columns</h3>
 <p>
-  Once we have our row, we can add columns. Think of an excel spreadsheet. The spreadsheet has rows, and within those rows, it has columns. In bootstrap, each row has <b>12 columns</b>. Using these 12 columns, we can neatly align content.
+  Once we have our <code>row</code>, we can add columns. Think of an excel spreadsheet. The spreadsheet has rows, and within those rows, it has columns. In bootstrap, each <code>row</code> consists of <strong>12 columns</strong>. Using these 12 columns, we can neatly align content.
 </p>
 
 <p>
@@ -37,11 +53,11 @@
 </p>
 
 <p>
-  Let's say I want 4 sections with the same width in my row. I would then create 4 divs with a column size of 3. 4 x 3 = 12 so this would work. 
+  Let's say I want 4 sections with the same width in my row. I would then create 4 <code>div</code>s with a column size of 3. 4 columns x 3 = 12 so this would work. 
 </p>
 
 <p>
-  If I want to create 3 sections that has the width ratio of 1:2:3, I would create 1 section with a column size of 2, another with a column size of 4, and another with a column size of 6. 1 x 2 + 1 x 4 + 1 x 6 = 12, so this works. If I wanted two small sections and one large section, I could create 2 sections with a column size of 1, and 1 section with a column size of 10. 1 x 2 + 1 x 10 = 12, so this works. Kind of starting to understand how this all works?
+  If I want to create 3 sections that has the width ratio of 1:2:3, I would create 1 section with a column size of 2, another with a column size of 4, and another with a column size of 6. 1 section x 2 + 1 section x 4 + 1 section x 6 = 12, so this works. If I wanted two small sections and one large section, I could potentially create 2 sections with a column size of 1, and 1 section with a column size of 10. 1 x 2 + 1 x 10 = 12, so this works. Kind of starting to understand how this all works?
 </p>
 
 <p>
@@ -49,18 +65,90 @@
 </p>
 
 <p>
-  Inside our div with a class of "row", let's add 3 divs with the class of "col-md-4". This class is basically saying, let's make a column with a size of 4, when the screen is medium size (md).
+  Inside our <code>&lt;div class = "row"&gt;</code>, let's add 3 <code>div</code>s with the class of <code>col-md-4</code>. This class is basically saying, let's make a <code>col</code>umn with a size of <code>4</code>, when the screen is medium size (<code>md</code>). Inside each <code>div</code>, let's add <code>&lt;h3&gt;Hello&lt;/h3&gt;</code> inside like this:.
+</p>
+
+<pre><code class="html">
+&lt;div class = "row"&gt;
+
+  &lt;div class = "col-md-4"&gt;
+    &lt;h3&gt;Hello&lt;/h3&gt;
+  &lt;/div&gt;
+
+  &lt;div class = "col-md-4"&gt;
+    &lt;h3&gt;Hello&lt;/h3&gt;
+  &lt;/div&gt;
+
+  &lt;div class = "col-md-4"&gt;
+    &lt;h3&gt;Hello&lt;/h3&gt;
+  &lt;/div&gt;
+
+&lt;/div&gt;
+
+</code></pre>
+
+<p>
+  Save the file and refresh the page. You'll see that you now have 3 nicely aligned columns.
 </p>
 
 <p>
-  Right now if you refresh your landing page, nothing is going to change since we don't have anything inside our columns. To add something in here, let's go back into the bootstrap website and go to "Components". Let's find and go to the "Panels" section and take a look. This looks like a pretty cool thing to add into our newly created super neatly aligned columns.
+  Let's replace the content inside the columns with something that looks nicer. Let's go back into the bootstrap website and go to "Components". Let's find and go to the "Panels" section and take a look. This looks like a pretty cool thing to add into our newly created super neatly aligned columns.
 </p>
 
 <p>
-  Let's copy the code that has the panel with a header and paste it into all 3 of our divs with the class of "col-md-4". Let's try refreshing our page and see if it works. The code should look something like below.
+  Let's copy the code that has a panel with a header, and paste it inside all 3 of our <code>&lt;div class = "col-md-4"&gt;</code>s. Let's try refreshing our page and see if it works. The code should look something like below.
 </p>
 
-<div class = "gist" data-src="https://gist.github.com/takehiromouri/697479fe0661598a3b8e.json"></div>
+<pre><code class="html">
+  &lt;!-- a bunch of code above --&gt;
+
+  &lt;div class="jumbotron"&gt;
+      &lt;h1&gt;Techrise&lt;/h1&gt;
+      &lt;p&gt;Learn how to code with Techrise&lt;/p&gt;
+      &lt;p&gt;Learn HTML, CSS, JavaScript, Ruby, and Ruby on Rails&lt;/p&gt;
+      &lt;p&gt;&lt;a class="btn btn-primary btn-lg" href="#" role="button"&gt;Learn more&lt;/a&gt;&lt;/p&gt;
+    &lt;/div&gt;
+
+    &lt;div class = "row"&gt;
+
+      &lt;div class = "col-md-4"&gt;
+        &lt;div class="panel panel-default"&gt;
+          &lt;div class="panel-heading"&gt;
+            &lt;h3 class="panel-title"&gt;Panel title&lt;/h3&gt;
+          &lt;/div&gt;
+          &lt;div class="panel-body"&gt;
+            Panel content
+          &lt;/div&gt;
+        &lt;/div&gt;
+      &lt;/div&gt;
+      
+      &lt;div class = "col-md-4"&gt;
+        &lt;div class="panel panel-default"&gt;
+          &lt;div class="panel-heading"&gt;
+            &lt;h3 class="panel-title"&gt;Panel title&lt;/h3&gt;
+          &lt;/div&gt;
+          &lt;div class="panel-body"&gt;
+            Panel content
+          &lt;/div&gt;
+        &lt;/div&gt;
+      &lt;/div&gt;
+
+      &lt;div class = "col-md-4"&gt;
+        &lt;div class="panel panel-default"&gt;
+          &lt;div class="panel-heading"&gt;
+            &lt;h3 class="panel-title"&gt;Panel title&lt;/h3&gt;
+          &lt;/div&gt;
+          &lt;div class="panel-body"&gt;
+            Panel content
+          &lt;/div&gt;
+        &lt;/div&gt;
+      &lt;/div&gt;
+
+    &lt;/div&gt;
+
+    &lt;!-- some code below --&gt;
+
+</code></pre>
 
 <%= image_tag 'bootstrappanels.png', class: 'screenshot' %>
 
