revise ideator lesson

--- a/app/views/ideator_lessons/lessons/lesson_1.html.erb
+++ b/app/views/ideator_lessons/lessons/lesson_1.html.erb
@@ -16,14 +16,18 @@
 </p>
 
 
-<pre><code class="bash">cd ~/desktop</code class="bash"></pre>
+<pre><code class="bash">
+cd ~/desktop
+</code></pre>
 
 <p>
 	This is where we’ll create our ideator app. In the terminal that we just opened up, let’s type in the following command.
 </p>
 
 
-<pre><code class="bash">rails new ideator --database=postgresql</code class="bash"></pre>
+<pre><code class="bash">
+rails new ideator --database=postgresql
+</code></pre>
 
 <p>
 	This command magically creates a new rails application using the postgresql database. Awesome!
@@ -38,26 +42,37 @@
 	Great, now that we’ve created our new rails app, let’s start this baby up. Let’s go into Tokaido and open up another terminal window. We want to have two terminal windows open since we want one for the server and one for typing in rails commands. In one of the terminal windows, let’s navigate to our project folder.
 </p>
 
-<code class="bash">cd ~/desktop/ideator</code class="bash">
+<code class="bash">
+cd ~/desktop/ideator
+</code>
 
 <p>
 	First we have to create our initial database. In the console enter
 </p>
 
-<pre><code class="bash">rake db:create:all</code class="bash"></pre>
-<pre><code class="bash">rake db:migrate</code class="bash"></pre>
+<pre><code class="bash">
+rake db:create:all
+</code></pre>
+
+<pre><code class="bash">
+rake db:migrate
+</code></pre>
 
 <p>
 	Now let’s fire up our rails server by entering this command.
 </p>
 
-<pre><code class="bash">rails server</code class="bash"></pre>
+<pre><code class="bash">
+rails server
+</code></pre>
 
 <p>
 	Give it a few seconds to load. Now go into your browser and go to
 </p>
 
-<pre><code class="bash">http://localhost:3000/</code class="bash"></pre>
+<pre><code class="bash">
+http://localhost:3000/
+</code></pre>
 
 <p>
 	You should see a nice welcome page from Ruby on Rails.
