--- a/app/views/ideator_lessons/lessons/lesson_2.html.erb
+++ b/app/views/ideator_lessons/lessons/lesson_2.html.erb
@@ -10,9 +10,17 @@
 
 <p>After you've done everything in that link, in your console type in</p>
 
-<pre><code class="bash">git init .</code class="bash"></pre>
-<pre><code class="bash">git add .</code class="bash"></pre>
-<pre><code class="bash">git commit -am “Initial commit”</code class="bash"></pre>
+<pre><code class="bash">
+git init .
+</code></pre>
+
+<pre><code class="bash">
+git add .
+</code></pre>
+
+<pre><code class="bash">
+git commit -am “Initial commit”
+</code></pre>
 
 <p>
 	Now let’s go into GitHub’s front page and create a new repository. On the left hand side, you should see a green button called “+ New repository”. Click on that button and just fill in the box that says “Repository name”.
@@ -34,8 +42,13 @@
 	Now what you’re going to do is copy the code right beneath that and paste it into your terminal. It should look something like this:
 </p>
 
-<pre><code class="bash">git remote add origin git@github.com:username/test.git</code class="bash"></pre>
-<pre><code class="bash">git push -u origin master</code class="bash"></pre>
+<pre><code class="bash">
+git remote add origin git@github.com:username/test.git
+</code></pre>
+
+<pre><code class="bash">
+git push -u origin master
+</code></pre>
 
 <p>
 	Once you’ve pasted and entered that into your terminal, you’re all set! GitHub is ready to go!
