--- a/app/views/ideator_lessons/lessons/lesson_4.html.erb
+++ b/app/views/ideator_lessons/lessons/lesson_4.html.erb
@@ -8,7 +8,9 @@
 	You can see all the files that rails generated for us. Now we’re going to generate some more. Let’s hop into our terminal and type in this command:
 </p>
 
-<pre><code>rails generate controller ideas</code></pre>
+<pre><code>
+rails generate controller ideas
+</code></pre>
 
 <p>
 	This command generates a <code>controller</code> called <code>ideas</code> for you and will also generate a lot of files again. Don’t worry too much about what this piece of code does yet. Things will start coming together as we progress, but for now we want you to start building an app first. This will keep you motivated from the start and help you overcome the first initial wall.
@@ -41,7 +43,9 @@ end
 	Inside index.html.erb, let’s add this:
 </p>
 
-<pre><code class="html">&lt;h1&gt;This is my first app ever and I’m super excited to become a coder&lt;/h1&gt;</code></pre>
+<pre><code class="html">
+&lt;h1&gt;This is my first app ever and I’m super excited to become a coder&lt;/h1&gt;
+</code></pre>
 
 <p>Awesome! Now let’s hop back into our browser and refresh <code>localhost:3000</code>.</p>
 
@@ -85,15 +89,21 @@ end
 
 <p>We’re first going to add all the files that we just updated:</p>
 
-<pre><code>git add .</code></pre>
+<pre><code>
+git add .
+</code></pre>
 
 <p>Then we’re going to add a commit message describing what we just updated:</p>
 
-<pre><code>git commit -am “Add ideas controller and set ideas#index as root”</code></pre>
+<pre><code>
+git commit -am “Add ideas controller and set ideas#index as root”
+</code></pre>
 
 <p>And finally, push up to GitHub.</p>
 
-<pre><code>git push origin master</code></pre>
+<pre><code>
+git push origin master
+</code></pre>
 
 <p><strong>You’ll be doing this quite a lot and it will become second nature!</strong></p>
 
