--- a/app/views/ideator_lessons/lessons/lesson_5.html.erb
+++ b/app/views/ideator_lessons/lessons/lesson_5.html.erb
@@ -17,10 +17,15 @@
 </p>
 
 <p>So like the documentation tells us, inside our gemfile let’s add</p>
-<pre><code>gem 'bootstrap-sass', '~> 3.3.6'</code></pre>
+<pre><code>
+gem 'bootstrap-sass', '~> 3.3.6'
+</code></pre>
 
 <p>Next, inside our console let’s run</p>
-<pre><code>bundle install</code></pre>
+
+<pre><code>
+bundle install
+</code></pre>
 
 <p>
 	This will install the gems for us. Everytime we run bundle install, we have to restart the server. Let’s go back into the console where the server is running and restart it.
@@ -30,7 +35,9 @@
 
 <p>Awesome. Next, it tells us to copy and paste some code. It’s telling us to rename application.css to application.scss. We could manually rename it, but the documentation also gives us a command that we can run in the console that does just this.</p>
 
-<pre><code>mv app/assets/stylesheets/application.css app/assets/stylesheets/application.scss</code></pre>
+<pre><code>
+mv app/assets/stylesheets/application.css app/assets/stylesheets/application.scss
+</code></pre>
 
 <p>Let’s run that command to rename the file.</p>
 
