--- a/app/views/ideator_lessons/lessons/lesson_7.html.erb
+++ b/app/views/ideator_lessons/lessons/lesson_7.html.erb
@@ -33,7 +33,9 @@
 	So let’s go ahead and go into sublime and open up application.html.erb. In your &lt;head&gt; section, add in the code. It should look something like this:
 </p>
 
-<pre><code class="html">&lt;link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'&gt;</code></pre>
+<pre><code class="html">
+&lt;link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'&gt;
+</code></pre>
 
 <p>
 	Great! Just like that, the font can now be used.
