--- a/app/views/ideator_lessons/lessons/lesson_9.html.erb
+++ b/app/views/ideator_lessons/lessons/lesson_9.html.erb
@@ -12,17 +12,17 @@
   We can create models by running this command:
 </p>
 
-<code>
+<pre><code>
 rails generate model ModelName
-</code>
+</code></pre>
 
 <p>
   In our case, let's name our model Idea. Let's go ahead and create the Idea model:
 </p>
 
-<code>
+<pre><code>
 rails generate model Idea
-</code>
+</code></pre>
 
 <p>
   This will create a file named something like this: <code>xxxxxxxxx_create_ideas.rb</code>. The "xxxx"s will be replaced by a time stamp of when the file was created. These files are called migration files because this file tells Rails what to "migrate" into our database.
