--- a/app/views/ideator_lessons/lessons/lesson_14.html.erb
+++ b/app/views/ideator_lessons/lessons/lesson_14.html.erb
@@ -47,13 +47,13 @@ end
   Now let's hop into <code>edit.html.erb</code>. Here we can actually use similar code that we have used before for creating new ideas. Make the file look like this:
 </p>
 
-<pre><code class="ruby">
+<pre><code class="html">
 &lt;h1>Revise Idea&lt;/h1&gt;
 
 &lt;%= simple_form_for @idea, method: :put do |f| %&gt;
 &lt;%= f.input :description %&gt;
-	&lt;%= f.input :author %>&gt;
-	&lt;%= f.submit 'Submit', class: 'btn btn-primary' %&gt;
+  &lt;%= f.input :author %&gt;
+  &lt;%= f.submit 'Submit', class: 'btn btn-primary' %&gt;
 &lt;% end %&gt;
 </code></pre>
 
