revise lesson 1 and 2

--- a/app/views/ideator_lessons/lessons/lesson_2.html.erb
+++ b/app/views/ideator_lessons/lessons/lesson_2.html.erb
@@ -5,7 +5,7 @@
 </p>
 
 <p>
-	First we have to set up our SSH keys. Follow <a href = "https://help.github.com/articles/generating-ssh-keys/" target = "_blank">this guide</a> to do so.
+	First we have to set up our SSH keys. Follow <a href = "https://help.github.com/articles/generating-ssh-keys/" target = "_blank">this guide</a> to do so. Make sure you follow each step in the guides from "Checking for existing SSH keys" to "Testing your SSH connection".
 </p>
 
 <p>After you've done everything in that link, in your console type in</p>
