--- a/app/views/ideator_lessons/lessons/lesson_1.html.erb
+++ b/app/views/ideator_lessons/lessons/lesson_1.html.erb
@@ -3,12 +3,12 @@
 <p>
 	Download Tokaido <a href = "https://github.com/tokaido/tokaidoapp/releases" target = "_blank">Here</a>
 </p>
-<p>
+<!-- <p>
 	Download Postgre <a href = "http://postgresapp.com/" target = "_blank">Here</a>
-</p>
+</p> -->
 
 <p>
-	Open Postgre and keep it running. Let’s then open Tokaido and click Open Terminal. Every time you work on this app, make sure to get these two things running.
+	Let's open Tokaido and click Open Terminal.
 </p>
 
 <p>
@@ -26,11 +26,11 @@ cd ~/desktop
 
 
 <pre><code class="bash">
-rails new ideator --database=postgresql
+rails new ideator
 </code></pre>
 
 <p>
-	This command magically creates a new rails application using the postgresql database. Awesome!
+	This command magically creates a new rails application. Awesome!
 </p>
 
 <p>
@@ -42,9 +42,9 @@ rails new ideator --database=postgresql
 	Great, now that we’ve created our new rails app, let’s start this baby up. Let’s go into Tokaido and open up another terminal window. We want to have two terminal windows open since we want one for the server and one for typing in rails commands. In one of the terminal windows, let’s navigate to our project folder.
 </p>
 
-<code class="bash">
+<pre><code class="bash">
 cd ~/desktop/ideator
-</code>
+</code></pre>
 
 <p>
 	First we have to create our initial database. In the console enter
@@ -57,6 +57,18 @@ rake db:create:all
 <pre><code class="bash">
 rake db:migrate
 </code></pre>
+
+<div class="well">
+	<h3>No Rakefile found?</h3>
+	<p>
+		If you get an error saying <code>No Rakefile found</code>, chances are you didn't navigate to your <code>ideator</code> folder before running the <code>rake</code> commands.
+	</p>
+
+	<p>
+		If you haven't done so, make sure to enter <code>cd ~/desktop/ideator</code> before entering the <code>rake</code> commands.
+	</p>
+
+</div>
 
 <p>
 	Now let’s fire up our rails server by entering this command.
