--- a/app/views/ideator_lessons/lessons/lesson_2.html.erb
+++ b/app/views/ideator_lessons/lessons/lesson_2.html.erb
@@ -23,15 +23,15 @@ git commit -am “Initial commit”
 </code></pre>
 
 <p>
-	Now let’s go into GitHub’s front page and create a new repository. On the left hand side, you should see a green button called “+ New repository”. Click on that button and just fill in the box that says “Repository name”.
+	Now let’s go into GitHub’s front page and create a new repository. On the left hand side, you should see a <strong>green button called “+ New repository”</strong>. Click on that button and just fill in the box that says <strong>“Repository name”</strong>.
 </p>
 
 <p>
-	Make sure you don’t check “Initialize this repository with a README”.
+	<strong>Make sure you don’t check “Initialize this repository with a README”.</strong>
 </p>
 
 <p>
-	Now click Create repository. 
+	Now click <strong>Create repository</strong>. 
 </p>
 
 <p>
@@ -43,7 +43,7 @@ git commit -am “Initial commit”
 </p>
 
 <pre><code class="bash">
-git remote add origin git@github.com:username/test.git
+git remote add origin git@github.com:yourUsernameHere/test.git
 </code></pre>
 
 <pre><code class="bash">
